<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#EFEFEF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/resultTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#999"
        android:textSize="40sp"
        android:gravity="end"
        android:text="@string/BTN12"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="@dimen/BTN_MARGIN_R"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#403e3e"
        android:gravity="center">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/BTN_Reset"
                style="@style/BT_NUM"
                android:layout_width="160dp"
                android:text="@string/BTNC"
                android:textColor="#e69138"/>
            <Button
                android:id="@+id/BTN_Fois"
                android:text="@string/BTN_Fois"
                style="@style/BT_OP"/>
            <Button
                android:id="@+id/BTN_Diviser"
                android:text="@string/BTN_Diviser"
                style="@style/BT_OP"/>
        </GridLayout>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/BTN1"
                android:text="@string/BTN1"
                style="@style/BT_NUM"/>
            <Button
                android:id="@+id/BTN2"
                android:text="@string/BTN2"
                style="@style/BT_NUM"/>
            <Button
                android:id="@+id/BTN3"
                android:text="@string/BTN3"
                style="@style/BT_NUM"
                />
            <Button
                android:id="@+id/BTN_Plus"
                android:text="@string/BTN_Plus"
                style="@style/BT_OP"/>
        </GridLayout>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/BTN4"
                android:text="@string/BT4"
                style="@style/BT_NUM"/>
            <Button
                android:id="@+id/BTN5"
                android:text="@string/BT5"
                style="@style/BT_NUM"/>
            <Button
                android:id="@+id/BTN6"
                android:text="@string/BT6"
                style="@style/BT_NUM"/>
            <Button
                android:id="@+id/BTN_Moins"
                android:text="@string/BT_Moins"
                style="@style/BT_OP"/>
        </GridLayout>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/BTN7"
                android:text="@string/BT7"
                style="@style/BT_NUM"/>
            <Button
                android:id="@+id/BTN8"
                android:text="@string/BT8"
                style="@style/BT_NUM"/>
            <Button
                android:id="@+id/BTN9"
                style="@style/BT_NUM"
                android:text="@string/BT9"/>
            <Button
                android:id="@+id/BTN_Pourcent"
                android:text="@string/BT_Pourcent"
                style="@style/BT_OP"/>
        </GridLayout>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/BTN0"
                android:text="@string/BT0"
                style="@style/BT_NUM"/>
            <Button
                android:id="@+id/BTN_Virgule"
                android:text="@string/BT_Virgule"
                style="@style/BT_POINT"/>
            <Button
                android:id="@+id/BTN_Egal"
                style="@style/BT_NUM"
                android:layout_width="160dp"
                android:text="@string/BT_Egal"/>
        </GridLayout>
    </LinearLayout>
</LinearLayout>